Mais itens no git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /.vs/ExerciciosLeetCode/FileContentIndex/d998a580-da8d-4974-a3d4-49b68c7b624f.vsidx
 /.vs/ExerciciosLeetCode/FileContentIndex/9b55011b-93ca-421d-8978-a40b5581ec01.vsidx
 /.vs/ExerciciosLeetCode/FileContentIndex
+/obj/Debug/net6.0
