--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /.vs/ExerciciosLeetCode/FileContentIndex/9b55011b-93ca-421d-8978-a40b5581ec01.vsidx
 /.vs/ExerciciosLeetCode/FileContentIndex
 /obj/Debug/net6.0
+/.vs
+/obj
